Added some QoL improvements. Major merge service refactor.